<android.support.v4.widget.DrawerLayout
android:id="@+id/drawerLayout"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".MainActivity">

<FrameLayout
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/includes_toolbar"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="right|bottom"
        app:elevation="10dp"
        app:borderWidth="0dp"
        app:backgroundTint="@color/DodgerBlue"
        android:layout_margin="15dp"
        android:src="@drawable/ic_action" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:background="#FFFFFF"
        android:padding="5dp">

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="196dp"
        android:layout_gravity="center"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/schedule"
            android:id="@+id/tvTownship4"
            android:textColor="#FFB400"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:background="#4B00F0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lazyRouteTownship_1"
            android:id="@+id/tvTownship1"
            android:textColor="#0F0000"
            android:textStyle="normal"
            android:textSize="28sp"
            android:gravity="left"
            android:layout_weight="0.20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lazyRouteTownship_2"
            android:id="@+id/tvTownship2"
            android:textColor="#0F0000"
            android:textStyle="normal"
            android:gravity="left"
            android:textSize="28sp"
            android:layout_weight="0.20"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lazyRouteTownship_3"
            android:id="@+id/tvTownship3"
            android:textColor="#0F0000"
            android:textStyle="normal"
            android:textSize="28sp"
            android:gravity="left"
            android:layout_weight="0.20" />

    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/fmMap"
        android:layout_gravity="center_horizontal|bottom" />

    <TextView
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:text="@string/LazyRouteTownship"
        android:id="@+id/LazyRouteTownship"
        android:textColor="#FFFFFF"
        android:textStyle="normal"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_weight="0.20"
        android:layout_gravity="left|top" />

</FrameLayout>

<android.support.design.widget.NavigationView
    android:id="@+id/navigationView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/drawer_header"
    app:menu="@menu/menu_main"/>

</android.support.v4.widget.DrawerLayout>